fixed essay box text overflow on registration page ( fixes #1250 )

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1085,8 +1085,7 @@ span {
 
 #essay {
     margin: 0px;
-    margin-top: 15px;
-    padding: 0px;
+    padding: 15px 0 0 0;
 }
 
 #essay #tips {
@@ -1098,19 +1097,23 @@ span {
     margin-top: 60px;
 }
 
+#essay #tips p {
+  margin: 10px 10px 10px 0;
+}
+
 #essay #tips li {
-    margin-left: 0px;
-    padding-left: 0px;
-    width: 330px;
-    margin-bottom: 3px;
+    margin: 0 0 2px 0;
+    padding: 0;
+    width: 335px;
     vertical-align: top;
+    letter-spacing: normal;
+    word-spacing: normal;
 }
 
 #essay #tips ul {
-    margin-left: 5px;
-    padding-left: 5px;
+    margin: 0 0 2px 10px;
+    padding: 0;
     list-style-type: disc;
-    margin-bottom: 2px;
 }
 
 #essay fieldset {
